<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">جنائز ودعوة</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="mosque_name">إسم الجامع :</string>
    <string name="janaez_number">عدد الجنائز :</string>
    <string name="please_wait">الرجاء الانتظار...</string>
    <string name="janaez">جنائز</string>
    <string name="day">اليوم :</string>
    <string name="date">التاريخ :</string>
    <string name="prayer">صلاة :</string>
    <string name="name">الاسم :</string>
    <string name="gender">الجنس :</string>
    <string name="added_to_fav">تمت إضافة الحديث إلى المفضلة</string>
    <string name="removed_from_fav">تم حذف الحديث من المفضلة</string>
    <string name="to_search">ابحث على</string>
    <string name="we_found">تم العثور على</string>
    <string name="no_hadith_found">لم يتم العثور على أي حديث يحتوي على</string>
    <string name="hadith">حديث</string>
    <string name="share">شارك</string>
    <string name="cancel">إلغاء</string>
    <string name="already_exist">ملف الصوت موجود</string>
    <string name="download_success">تم تحميل الحديث بنجاح</string>
    <string name="download_error">خطا في تحميل الحديث، حاول لاحقاً</string>
    <string name="download_running">جاري تحميل الحديث</string>
    <string name="preparing_audio">جاري تحضير الحديث</string>
    <string name="error_internet_connexion">تأكد من الاتصال بالانترنت</string>
    <string name="comment_name">العنوان :</string>
    <string name="comment_email">الإيميل :</string>
    <string name="comment_text">التعليق :</string>
    <string name="please_fill">الرجاء ملء كل الفراغات</string>
    <string name="empty_list">قائمة فارغة</string>
    <string name="amaken">إختر المدينة</string>
    <string name="wait_other_download">الرجاء الانتظار... جاري تحميل حديث أخر</string>
    <string name="comments">التعليقات</string>
    <string name="remove">حذف</string>
    <string name="update">تحديث</string>
    <string name="modifications">تعديل التعليق</string>
    <string name="select_place">الرجاء إختيار مدينة</string>
    <string name="address">العنوان :</string>
    <string name="phones">الإتصال :</string>
    <string name="call_title">إختر الرقم الذي تريد الإتصال به :</string>
    <string name="settings">الإعدادات</string>
    <string name="notifications">الاخطارات :</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="push_notif">اخطارات جنائز ودعوة</string>
    <string name="men">رجل</string>
    <string name="women">إمراة</string>
    <string name="child_male">طفل</string>
    <string name="child_female">طفلة</string>
    <string name="janeza_douaa">اللهم نقهم من الخطايا كما ينقى الثوب الأبيض من الدنس</string>
    <string name="share_info">أنشر الخبر</string>
    <string name="principal">الرئيسية</string>
    <string name="share_app">ساهم بنشر التطبيق</string>
    <string name="login">دخول</string>
    <string name="add_janaza">إضافة جنازة</string>
    <string name="add_mouhadhra">إضافة محاضرة</string>
    <string name="quit">الخروج</string>
    <string name="hint_login">رقم الجوال</string>
    <string name="hint_pwd">كلمة المرور</string>
    <string name="login_empty">الرجاء إدخال إسم المستخدم وكلمة السر للتسجيل !</string>

    <string name="empty_add_janaza_mouhadhra">الرجاء ملء جميع الفراغات !</string>
    
    <string name="success_add">تمت الاضافة بنجاح</string>
    <string name="error_add">خطأ في الإضافة ! الرجاء المحاولة لاحقاً !</string>
    
    <string name="drawer_janaez">الجنائز</string>
    <string name="drawer_mouhadhrat">المحاظرات والدروس</string>
    <string name="drawer_share">شارك التطبيق</string>
    <string name="drawer_settings">الإعدادات</string>
    
    <string name="send">إرسال</string>
    <string name="prop_title">عنوان الرسالة</string>
    <string name="prop_number">رقم الموبايل</string>
    <string name="prop_message">الرسالة</string>
    <string name="save">حفظ</string>
    <string name="preview">معاينة</string>
    <string name="propositions">إقتراحات</string>
    <string name="admin_menu">لوحة التحكم</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="ok">تم</string>
    <string name="check_login_password">رجاء التأكد من إسم الدخول و كلمة السر</string>
    <string name="error_try_again">خطا ! رجاء المحاولة لاحقاً</string>
    <string name="no_mosques">لا يوجد جوامع في هذه المنطقة</string>
    
</resources>