<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_green"
    android:layout_marginTop="50dp" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/color_gray"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/txv_prayer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/prayer"
            android:textColor="@color/color_green" />

        <TextView
            android:id="@+id/txv_prayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txv_prayer_name"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/prayer"
            android:textColor="@color/color_beige" />

        <TextView
            android:id="@+id/txv_date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/txv_prayer"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/date"
            android:textColor="@color/color_green" />

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txv_date_name"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/date"
            android:textColor="@color/color_beige" />

        <TextView
            android:id="@+id/txv_day_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/txv_date"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/day"
            android:textColor="@color/color_green" />

        <TextView
            android:id="@+id/txv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txv_day_name"
            android:maxLines="1"
            android:padding="2dp"
            android:text="@string/day"
            android:textColor="@color/color_beige" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txv_emptyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/empty_list"
        android:textColor="#000"
        android:textSize="20sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#fff"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/txv_total"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/circle_shape"
            android:gravity="center"
            android:text="10"
            android:textColor="#fff" 
            android:textSize="16sp"
            android:layout_toLeftOf="@+id/txv_title"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:text="@string/mosque_name"
            android:textColor="@color/color_beige"
            android:textSize="16sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="1px"
            android:layout_centerHorizontal="true"
            android:background="@color/color_green"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txv_title" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="75dp"
        android:dividerHeight="1px"
        android:gravity="center" />

</RelativeLayout>