<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank_bg" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_green" >

        <TextView
            android:id="@+id/top_header"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/color_green"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/propositions"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="25sp" />
        
        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/back_list" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_below="@+id/top" >

        <ScrollView
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lbl_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/prop_title"
                        android:textColor="@color/jd_green"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bkg_rounded_border"
                        android:gravity="right|center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@color/gold"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lbl_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/prop_number"
                        android:textColor="@color/jd_green"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txv_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bkg_rounded_border"
                        android:gravity="right|center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="@color/gold"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/lbl_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/prop_message"
                        android:textColor="@color/jd_green"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/txv_body"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bkg_rounded_border"
                        android:gravity="right"
                        android:padding="5dp"
                        android:textColor="@color/gold"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp" >

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/login_login_btn"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>